# ShapeTranslator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
converters/: shacl_to_json.py  shacl_to_shex.py  shex_to_json.py  shex_to_shacl.py
docs/: architecture.md  dataset.md  evaluation.md  evaluation_example.md  mapping-rules.md  shexje-spec.md  translation-coverage.md  validator-compatibility.md  wikidata-labels.md
json_to_shacl_dbpedia/: Airport.ttl  Artist.ttl  Astronaut.ttl  Athlete.ttl  Building.ttl  CelestialBody.ttl  City.ttl  ComicsCaracter.ttl  Company.ttl  Film.ttl  Food.ttl  MeanOfTransportation.ttl  Monument.ttl  MusicalWork.ttl  Person.ttl  Politician.ttl  Scientist.ttl  SportsTeam.ttl  University.ttl  WrittenWork.ttl
json_to_shex_dbpedia/: Airport.shex  Artist.shex  Astronaut.shex  Athlete.shex  Building.shex  CelestialBody.shex  City.shex  ComicsCaracter.shex  Company.shex  Film.shex  Food.shex  MeanOfTransportation.shex  Monument.shex  MusicalWork.shex  Person.shex  Politician.shex  Scientist.shex  SportsTeam.shex  University.shex  WrittenWork.shex
models/: json_model.py  shacl_model.py  shex_model.py
parsers/: shacl_parser.py  shex_parser.py
serializers/: json_serializer.py  shacl_serializer.py  shex_serializer.py
shacl_to_json/: AdministrativeArea.json  Airline.json  Airport.json  AstronomicalObject.json  Award.json  BeliefSystem.json  BodyOfWater.json  Book.json  City.json  Continent.json  Corporation.json  Country.json  CreativeWork.json  Creator.json  EducationalOrganization.json  Event.json  (+21 more)
(+385 files in other folders)
