[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaclex-py"
version = "0.1.0"
description = "Bidirectional SHACL/ShEx translator -- Python companion to weso/shaclex"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Christopher Ringwald" },
]
keywords = ["shacl", "shex", "rdf", "validation", "semantic-web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rdflib>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
shaclex-py = "shaclex_py.cli:main"

[project.urls]
Homepage = "https://github.com/weso/shaclex"
Repository = "https://github.com/cringwald/shaclex-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
